--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
     "axios": "^0.20.0",
     "next": "^9.5.3",
     "react": "^16.13.1",
