--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "axios": "^0.20.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^9.5.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
